# maturin-bug-reproduce

./: Cargo.toml  Dockerfile  build-log.txt
src/: lib.rs  python.rs
